--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node index",
-    "start": "nodemon index.js"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
